--- a/src/todo.css
+++ b/src/todo.css
@@ -9,67 +9,60 @@ input:focus {
   outline: none;
 }
 
-.list {
-  background-color: #ebecf0;
-  width: 300px;
-  margin: 16px;
-  border-radius: 9px;
-  padding: 8px;
-  height: fit-content;
-
+.container {
+  width: 600px;
+  margin: auto;
 }
 
-.list-heading {
-  font-size: 14px;
-  color: #333;
-  text-align: left;
-  font-weight: bold;
-  margin: 8px 0;
+@media (max-width: 600px) {
+  .container {
+    width: 90%;
+  }
 }
 
-.heading-input-box {
+
+
+
+.input_box {
   width: 100%;
-  background-color: #ebecf0;
+  padding: 16px;
   border: none;
-  font-size: 14px;
-  margin: 8px 0;
+  box-shadow: 0 -2px 1px rgba(0, 0, 0, 0.03);
+  font-size: 24px;
 }
 
-.d-f-f-w {
+.todo-box {
+  padding: 16px;
+  border-bottom: 1px solid #e6e6e6;
   display: flex;
+  justify-content: space-between;
+  background-color: #fafafa;
+  width: 100%;
+  box-shadow: 0 -2px 1px rgba(0, 0, 0, 0.03);
+}
+
+.todo-text{
+  font-size: 20px;
+  color:#666;
+  word-break: break-all;
+  margin:0 16px;
+}
+
+.types-container{
+  box-shadow: 0 -2px 1px rgba(0, 0, 0, 0.03);
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  background-color: #fff;
+  padding: 16px;
   flex-wrap: wrap;
 }
 
-.task-details-container {
-  background-color: #fff;
-  margin:8px 0;
-  border-radius: 5px;
+.types-box{
+  padding:8px;
+
 }
 
-.task-text {
-  font-size: 12px;
-  color: #333;
-  padding: 8px;
-  text-align: left;
-  word-break: break-all;
-}
-
-.add-new-task-input {
-  background-color: transparent;
-  border: none;
-  font-size: 14px;
-  width: 100%;
-  margin:8px 0
-}
-
-.add-list-container{
-    background-color: #78C0D6;
-    color:#fff;
-    padding:8px;
-    font-size: 14px;
-    margin:16px;
-    width:300px;
-    text-align: left;
-    cursor: pointer;
-    height: fit-content;
+.active{
+  border:1px solid #e6e6ee
 }
